--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -16,5 +18,6 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.2",
     "validator": "^13.12.0"
-  }
+  },
+  "type": "module"
 }
