--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.2",
+    "node-forge": "^1.3.1",
     "validator": "^13.12.0"
   },
   "type": "module"
